fix: Navigation spacing

--- a/styles/blocks/_nav.scss
+++ b/styles/blocks/_nav.scss
@@ -2,6 +2,7 @@
     --nav-flex-direction: column;
     --nav__item-margin-bottom: 1rem;
     --nav__item--next-margin-left: 0;
+    --nav__item--prev-margin-right: 0;
 }
 .nav {
     display: flex;
@@ -26,11 +27,15 @@
 .nav__item--next {
     margin-left: var(--nav__item--next-margin-left);
 }
+.nav__item--prev {
+    margin-right: var(--nav__item--prev-margin-right);
+}
 
 @media (min-width: 1024px) {
     :root {
         --nav-flex-direction: row;
         --nav__item-margin-bottom: 0;
-        --nav__item--next-margin-left: auto;
+        --nav__item--next-margin-left: 1rem;
+        --nav__item--prev-margin-right: 1rem;
     }
 }
